@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.651 2006/06/10 00:24:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.652 2006/06/17 04:55:04 codeman Exp $
+
+  17 Jun 2006; Preston Cody <codeman@gentoo.org>
+  Added code to the mta step in AT to parse the install packages list and
+  look for mtas and if it finds it emerge it.
 
   9 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
